<resources>
    <string name="app_name">ElderlyCareApp</string>
    <string name="welcome_to_signin">Welcome to SignIn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_here"><b>Start here,</b></string>
    <string name="welcome_to_elderly_care"><b>Welcome to Elderly Care</b></string>
    <string name="medicine">Medicine</string>
    <string name="appointment">Appointment</string>
    <string name="time">Time</string>
    <string name="dose">Dose</string>
    <string name="medicine_type">Medicine Type</string>
    <string name="date">Date</string>
    <string name="appointment_reason">Appoitment Reason</string>
    <string name="appointment_date">Appointment Date:</string>
    <string name="appointment_time">Appointment Time:</string>
    <string name="appointment_reason_tv">Appointment Reason:</string>
    <string name="hospital_name">Hospital Name:</string>
    <string name="hospital_name_et">Hospital Name</string>
    <string name="deletemedimg">deleteMedImg</string>
    <string name="Start_here">Start Here</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_massage">Notification Massage</string>
    <string name="set_notification">Set Notification</string>
    <string name="editappimg">editAppImg</string>
    <string name="deleteappimg">deleteAppImg</string>
    <string name="pick_appointment_date">pick appointment Date</string>
    <string name="pick_appointment_time">pick appointment Time</string>
    <string name="appointment_reason_add">Appointment Reason</string>
    <string name="hospital_name_add">Hospital Name</string>
    <string name="save_add">Save</string>
    <string name="icon_add_date">icon_add_date</string>
    <string name="icon_time_add">icon_time_add</string>
    <string name="medicine_type_add">Medicine Type</string>
    <string name="medicine_dose_add">Medicine Dose</string>
    <string name="icon_med_date">icon_med_date</string>
    <string name="pick_medicine_date_add">pick medicine date</string>
    <string name="icon_time_med">icon_time_med</string>
    <string name="pick_medicine_time">pick medicine time</string>
    <string name="save_med">Save</string>
    <string name="appointment_date_edit">Appointment Date</string>
    <string name="appointment_time_edit">Appointment Time</string>
    <string name="appointment_reason_edit">Appointment Reason</string>
    <string name="hospital_name_edit">Hospital Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="medicine_type_edit">Medicine Type</string>
    <string name="medicine_dose_edit">Medicine Dose</string>
    <string name="medicine_date_edit">Medicine Date</string>
    <string name="medicine_time_edit">Medicine Time</string>
    <string name="save_changes_edit">Save Changes</string>
    <string name="icon_pro">icon_pro</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="notification">Notification</string>
    <string name="health_care">Health Care</string>
    <string name="notes">Notes</string>
    <string name="log_out">Log out</string>
    <string name="medicine_type_item">Medicine Type:</string>
    <string name="medicine_dose_item">Medicine Dose:</string>
    <string name="medicine_time_item">Medicine Time:</string>
    <string name="medicine_date_item">Medicine Date:</string>
    <string name="icon_edit_med">icon_edit_med</string>
    <string name="icon_delete_med">icon_delete_med</string>
    <string name="home">Home</string>
    <string name="healthcare">HealthCare</string>
    <string name="health_situations">Health Situations</string>
    <string name="notes_show">Notes</string>
    <string name="save_change_profile">Save Change</string>

</resources>