<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragment.ProfileFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:orientation="vertical">


                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/profile_image"
                    style="@style/RoundedSquare"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/icon_pro" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/email"
                    android:textSize="11sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="110dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="257dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <androidx.constraintlayout.utils.widget.ImageFilterButton
                    android:id="@+id/edit_Profile"
                    android:layout_width="45dp"
                    android:layout_height="53dp"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="20sp"
                    android:background="@color/white"
                    android:padding="20dp"
                    android:src="@drawable/ic_baseline_edit_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="80dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:ignore="UselessParent">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/notification"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <androidx.constraintlayout.utils.widget.ImageFilterView
                        android:id="@+id/notifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_circle_notifications_24" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/healthCare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:autoSizeTextType="uniform"
                android:paddingStart="20dp"
                android:text="Diabetes, blood pressure, cholesterol, heart disease"

                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="15dp">

            <TextView
                android:id="@+id/Notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="20dp"
                android:text="Fruit allergy, gluten allergy,"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutBtn"
            android:background="@drawable/background_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>


